Fixing dropdown not showing

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -44,6 +44,3 @@
 .nav-btns a:hover {
   color: white;
 }
-
-/* Class to show a hidden object */
-.show {display:block;}
