--- a/src/css/user_dropdown.css
+++ b/src/css/user_dropdown.css
@@ -21,9 +21,13 @@
     cursor: pointer;
 }
 
-#user-dropdown-username{
+#user-dropdown-username {
     display: table;
     padding: 0px 10px;
+}
+
+a#user-dropdown-username {
+    height: 28px;
 }
 
 #header-img-avatar {
@@ -38,3 +42,5 @@
     vertical-align: middle;
     padding-left: 0.25em;
 }
+/* Class to show a hidden object */
+.show {display:block;}
